<resources>
    <string name="app_name">EpicSode</string>
    <string name="email_hint">Email:</string>
    <string name="pass_hint">Password:</string>
    <string name="loginbtn">Log-in</string>
    <string name="noaccbtn">Dont have account? Click to Sign-up!</string>
    <string name="donebtn">Done</string>
    <string name="signupbtn">Sign up</string>
    <string name="skipbtn">Skip</string>
    <string name="backbtn">Back</string>
    <string name="haveaccbtn">Already have an account? Click to Log-in</string>
    <string name="age_hint">Age:</string>
    <string name="male_check">Male</string>
    <string name="female_check">Female</string>
    <string name="epicsode_logo">Epicsodelogo</string>
    <string name="search">SEARCH</string>
    <string name="enter_tv_series_name">Enter TV series name</string>
    <string name="action">Action</string>
    <string name="animation">Animation</string>
    <string name="thriller">Thriller</string>
    <string name="documentary">Documentary</string>
    <string name="history">History</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="tv_movie">Tv Movie</string>
    <string name="fantasy">Fantasy</string>
    <string name="extraemail">extraEmail</string>
    <string name="mystery">Mystery</string>
    <string name="drama">Drama</string>
    <string name="crime">Crime</string>
    <string name="war">War</string>
    <string name="family">Family</string>
    <string name="western">Western</string>
    <string name="music">Music</string>
    <string name="for_future_series_recommendations_n_select_your_favorite_genres">For future series recommendations, \n select your favorite genres:</string>
    <string name="horror">Horror</string>
    <string name="comedy">Comedy</string>
    <string name="romance">Romance</string>
    <string name="adventure">Adventure</string>
    <string name="my_favorite_genres">My favorite genres:</string>
    <string name="profile">Profile</string>
    <string name="title_activity_test">test</string>
    <string name="version_2_3_1_n_created_by_n_idan_zimbler_amp_refael_mizrahi"><![CDATA[Version 2.3.1 \nCreated by\nIdan Zimbler & Refael Mizrahi]]></string>
    <string name="idanqwe_gmail_com">idanqwe@gmail.com</string>
    <string name="refaelm92_gmail_com">refaelm92@gmail.com</string>
    <string name="contact_us">Contact us:</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="kids">Kids</string>
    <string name="action_adventure"><![CDATA[Action & Adventure]]></string>
    <string name="news">News</string>
    <string name="sci_fi_fantasy"><![CDATA[Sci-Fi & Fantasy]]></string>
    <string name="reality">Reality</string>
    <string name="soap">Soap</string>
    <string name="talk">Talk</string>
    <string name="recommendation">Recommendation</string>
    <string name="war_politics"><![CDATA[War & Politics]]></string>
    <string name="sign_out">Sign Out</string>
    <string name="age">Age:</string>>


</resources>
