<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homemenu"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:title="@string/favorites"
        android:id="@+id/favoritesmenu"
        android:orderInCategory="101"
        app:showAsAction="never" />
    <item
        android:title="@string/profile"
        android:id="@+id/profilemenu"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item
        android:title="@string/about"
        android:id="@+id/aboutmenu"
        android:orderInCategory="103"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/signoutmenu"
        android:orderInCategory="104"
        android:title="@string/sign_out"
        app:showAsAction="never" />

</menu>