<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightbluewallpaper"
    tools:context=".view.GenresActivity"
    tools:layout_editor_absoluteY="25dp">

    <CheckBox
        android:id="@+id/genres_western_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="checkBoxClick"
        android:text="@string/western"
        app:layout_constraintStart_toEndOf="@+id/genres_action_adventure_cb"
        app:layout_constraintTop_toBottomOf="@+id/genres_war_politics_cb" />

    <CheckBox
        android:id="@+id/genres_talk_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="checkBoxClick"
        android:text="@string/talk"
        app:layout_constraintStart_toEndOf="@+id/genres_action_adventure_cb"
        app:layout_constraintTop_toBottomOf="@+id/genres_soap_cb" />

    <CheckBox
        android:id="@+id/genres_war_politics_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="checkBoxClick"
        android:text="@string/war_politics"
        app:layout_constraintStart_toEndOf="@+id/genres_action_adventure_cb"
        app:layout_constraintTop_toBottomOf="@+id/genres_talk_cb" />

    <CheckBox
        android:id="@+id/genres_soap_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="checkBoxClick"
        android:text="@string/soap"
        app:layout_constraintStart_toEndOf="@+id/genres_action_adventure_cb"
        app:layout_constraintTop_toBottomOf="@+id/genres_scifi_fantasy_cb" />

    <CheckBox
        android:id="@+id/genres_scifi_fantasy_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="checkBoxClick"
        android:text="@string/sci_fi_fantasy"
        app:layout_constraintStart_toEndOf="@+id/genres_action_adventure_cb"
        app:layout_constraintTop_toBottomOf="@+id/genres_reality_cb" />

    <CheckBox
        android:id="@+id/genres_reality_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="checkBoxClick"
        android:text="@string/reality"
        app:layout_constraintStart_toEndOf="@+id/genres_action_adventure_cb"
        app:layout_constraintTop_toBottomOf="@+id/genres_news_cb" />

    <CheckBox
        android:id="@+id/genres_news_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="checkBoxClick"
        android:text="@string/news"
        app:layout_constraintStart_toEndOf="@+id/genres_action_adventure_cb"
        app:layout_constraintTop_toBottomOf="@+id/genres_mystery_cb" />

    <CheckBox
        android:id="@+id/genres_kids_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/kids"
        android:onClick="checkBoxClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres_family_cb" />

    <CheckBox
        android:id="@+id/genres_family_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/family"
        android:onClick="checkBoxClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres_drama_cb" />

    <CheckBox
        android:id="@+id/genres_drama_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/drama"
        android:onClick="checkBoxClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres_documentary_cb" />

    <CheckBox
        android:id="@+id/genres_documentary_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/documentary"
        android:onClick="checkBoxClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres_crime_cb" />

    <CheckBox
        android:id="@+id/genres_crime_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/crime"
        android:onClick="checkBoxClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres_comedy_cb" />

    <CheckBox
        android:id="@+id/genres_comedy_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/comedy"
        android:onClick="checkBoxClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres_animation_cb" />

    <CheckBox
        android:id="@+id/genres_action_adventure_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="checkBoxClick"
        android:text="@string/action_adventure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/genres_mystery_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="checkBoxClick"
        android:text="@string/mystery"
        app:layout_constraintStart_toEndOf="@+id/genres_action_adventure_cb"
        app:layout_constraintTop_toTopOf="@+id/genres_action_adventure_cb" />

    <CheckBox
        android:id="@+id/genres_animation_cb"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/animation"
        android:onClick="checkBoxClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres_action_adventure_cb" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="137dp"
        android:gravity="center"
        android:text="@string/for_future_series_recommendations_n_select_your_favorite_genres"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="21sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="169dp"
        android:layout_marginStart="167dp"
        android:indeterminate="false"
        android:indeterminateDrawable="@drawable/blackprogressbar"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/finishbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/finishbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/mybutton"
        android:text="@string/donebtn"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skipbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/skipbtn"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/extraEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="486dp"
        android:layout_marginEnd="348dp"
        android:layout_marginRight="348dp"
        android:layout_marginBottom="62dp"
        android:text="@string/extraemail"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>