<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightbluewallpaper"
    tools:context=".view.SignUpActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/signemailtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:drawableStart="@drawable/emaillogo"
        android:drawableLeft="@drawable/emaillogo"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/signpasstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/locklogo"
        android:drawableLeft="@drawable/locklogo"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        app:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintStart_toStartOf="@+id/signemailtxt"
        app:layout_constraintTop_toBottomOf="@+id/signemailtxt" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="15dp"
        android:indeterminate="false"
        android:indeterminateDrawable="@drawable/blackprogressbar"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/signupbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/mybutton"
        android:text="@string/signupbtn"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/haveaccbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressbar" />

    <TextView
        android:id="@+id/haveaccbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/haveaccbtn"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/signagetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/agelogo"
        android:drawableLeft="@drawable/agelogo"
        android:ems="10"
        android:hint="@string/age_hint"
        android:inputType="number"
        app:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintStart_toStartOf="@+id/signpasstxt"
        app:layout_constraintTop_toBottomOf="@+id/signpasstxt" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="203dp"
        android:layout_height="37dp"
        android:layout_marginTop="51dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signagetxt">

        <RadioButton
            android:id="@+id/radiobtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/male_check"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="221dp" />

        <RadioButton
            android:id="@+id/radiobtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorAccent"
            android:text="@string/female_check"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="69dp"
            tools:layout_editor_absoluteY="238dp" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>